--- a/package.json
+++ b/package.json
@@ -3,16 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
     "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.0",
-    "node-uuid": "^1.4.8",
-    "socket.io": "^2.1.1"
+    "express-ws": "^3.0.0",
+    "node-uuid": "^1.4.8"
   }
 }
